--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
     <div class="header">
         <div class="container">
             <nav class="nav">
@@ -23,14 +24,207 @@
                 <div class="nav-right">
                     <a href="#"><img src="img/icon/menu.svg" alt="menu" class="menu"></a>
                     <a href="#"><img src="img/icon/user.svg" alt="user" class="user"></a>
-                    <a href="#"><img src="img/icon/cart.svg" alt="cart"></a>
+                    <a href="#">
+                        <img src="img/icon/cart.svg" alt="cart" class="cart">
+                        <span class="badge">5</span>
+                    </a>
                 </div>
             </nav>
         </div>
     </div>
+
     <main class="main">
 
+        <div class="top">
+            <div class="container">
+                <h1 class="main_title"><span class="title_bolt">THE BRAND</span><br>OF LUXERIOUS <span
+                        class="title_red">FASHION</span>
+                </h1>
+            </div>
+        </div>
+
+        <div class="cards">
+            <div class="container">
+                <div class="cards_top">
+
+                    <div class="cards_top_item-1">
+                        <span class="top_item_text">30% OFF</span>
+                        <h3 class="top_item_title">FOR WOMEN</h3>
+                    </div>
+
+
+                    <div class="cards_top_item-2">
+                        <span class="top_item_text">HOT DEAL</span>
+                        <h3 class="top_item_title">FOR MEN</h3>
+                    </div>
+
+
+                    <div class="cards_top_item-3">
+                        <span class="top_item_text">NEW ARRIVALS</span>
+                        <h3 class="top_item_title">FOR KIDS</h3>
+                    </div>
+
+                </div>
+                <div class="cards_bottom">
+                    <div class="cards_bottom_item">
+                        <span class="bottom_item_text">LUXIROUS & TRENDY</span>
+                        <h3 class="bottom_item_title">ACCESORIES</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="product">
+            <div class="container">
+                <h3 class="product_title">Fetured Items</h3>
+                <p class="product_text">Shop for items based on what we featured in this week</p>
+                <div class="product_card">
+
+                    <div class="product_card_item">
+                        <img src="./img/card-1.jpg" alt="card">
+                        <div class="product_card_info">
+                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym Ellery teams up with Moda
+                                Operandi.</span>
+                            <span class="product_card_price">$52.00</span>
+                        </div>
+                    </div>
+
+                    <div class="product_card_item">
+                        <img src="./img/card-2.jpg" alt="card">
+                        <div class="product_card_info">
+                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym Ellery teams up with Moda
+                                Operandi.</span>
+                            <span class="product_card_price">$52.00</span>
+                        </div>
+                    </div>
+
+                    <div class="product_card_item">
+                        <img src="./img/card-3.jpg" alt="card">
+                        <div class="product_card_info">
+                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym Ellery teams up with Moda
+                                Operandi.</span>
+                            <span class="product_card_price">$52.00</span>
+                        </div>
+                    </div>
+
+                    <div class="product_card_item">
+                        <img src="./img/card-4.jpg" alt="card">
+                        <div class="product_card_info">
+                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym Ellery teams up with Moda
+                                Operandi.</span>
+                            <span class="product_card_price">$52.00</span>
+                        </div>
+                    </div>
+
+                    <div class="product_card_item">
+                        <img src="./img/card-5.jpg" alt="card">
+                        <div class="product_card_info">
+                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym Ellery teams up with Moda
+                                Operandi.</span>
+                            <span class="product_card_price">$52.00</span>
+                        </div>
+                    </div>
+
+                    <div class="product_card_item">
+                        <img src="./img/card-6.jpg" alt="card">
+                        <div class="product_card_info">
+                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym Ellery teams up with Moda
+                                Operandi.</span>
+                            <span class="product_card_price">$52.00</span>
+                        </div>
+                    </div>
+
+                </div>
+                <a href="#" class="more_button">Browse All Product</a>
+            </div>
+        </div>
+
+        <div class="advantages">
+            <div class="container">
+                <div class="advantages_card">
+
+                    <div class="advantages_card_item">
+                        <img src="./img/icon/delivery.svg" alt="delivery" class="advantages_card_icon">
+                        <h4 class="advantages_card_title">Free Delivery</h4>
+                        <p class="advantages_card_subtitle">Worldwide delivery on all. Authorit tively morph
+                            next-generation innov tion with extensive models.</p>
+                    </div>
+
+                    <div class="advantages_card_item">
+                        <img src="./img/icon/sale.svg" alt="delivery" class="advantages_card_icon">
+                        <h4 class="advantages_card_title">Sales & discounts</h4>
+                        <p class="advantages_card_subtitle">Worldwide delivery on all. Authorit tively morph
+                            next-generation innov tion with extensive models.</p>
+                    </div>
+
+                    <div class="advantages_card_item">
+                        <img src="./img/icon/quality.svg" alt="delivery" class="advantages_card_icon">
+                        <h4 class="advantages_card_title">Quality assurance</h4>
+                        <p class="advantages_card_subtitle">Worldwide delivery on all. Authorit tively morph
+                            next-generation innov tion with extensive models.</p>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+
+        <div class="subscribe">
+            <div class="container">
+
+                <div class="subscribe_contant">
+                    <div class="user_profile">
+                        <div class="foto_user">
+                            <img src="./img/foto-user.png" alt="user" class="foto_user_img">
+                        </div>
+                        <p class="user_text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus
+                            condimentum“</p>
+                    </div>
+
+                    <div class="subscribe_form">
+                        <h4 class="form_title">SUBSCRIBE</h4>
+                        <p class="form_subtitle">FOR OUR NEWLETTER AND PROMOTION</p>
+                        <div class="form_submit">
+                            <input type="email" name="email" id="email" placeholder="Enter Your Email" class="email">
+                            <button type="submit" class="submit">Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer_info">
+                <div class="copy">&copy; 2021 Brand All Rights Reserved.</div>
+                <div class="social">
+                    <a href="http://facebook.com" target="_blanck" class="facebook"><img src="./img/icon/facebook.svg"
+                            alt="facebook"></a>
+                    <a href="http://instagram.com" target="_blanck" class="instagram"><img
+                            src="./img/icon/instagram.svg" alt="instagram"></a>
+                    <a href="http://pinterest.com" target="_blanck" class="pinterest"><img
+                            src="./img/icon/pinterest.svg" alt="pinterest"></a>
+                    <a href="http://twitter.com" target="_blanck" class="twitter"><img src="./img/icon/twitter.svg"
+                            alt="twitter"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
