--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
     <header class="header">
         <div class="container">
             <div class="nav">
@@ -37,52 +36,16 @@
             </div>
         </div>
     </header>
-
     <main class="main">
+        <section class="card_page_nav">
 
-        <section class="top">
-            <div class="container">
-                <h1 class="main_title"><span class="title_bolt">The Brand</span><br>of Luxerious <span
-                        class="title_red">Fashion</span>
-                </h1>
-            </div>
         </section>
+        <section class="card_page_filter">
 
-        <section class="cards">
-            <div class="container">
-                <div class="cards_top">
-
-                    <div class="cards_top_item-1">
-                        <span class="top_item_text">30% off</span>
-                        <h3 class="top_item_title">For women</h3>
-                    </div>
-
-
-                    <div class="cards_top_item-2">
-                        <span class="top_item_text">Hot deal</span>
-                        <h3 class="top_item_title">For Men</h3>
-                    </div>
-
-
-                    <div class="cards_top_item-3">
-                        <span class="top_item_text">New Arrivals</span>
-                        <h3 class="top_item_title">For Kids</h3>
-                    </div>
-
-                    <div class="cards_top_item-4">
-                        <span class="bottom_item_text">Luxerious & Trendy</span>
-                        <h3 class="bottom_item_title">Accesories</h3>
-                    </div>
-                </div>
-            </div>
         </section>
-
         <section class="product">
             <div class="container">
-                <h3 class="product_title">Fetured Items</h3>
-                <p class="product_text">Shop for items based on what we featured in this week</p>
                 <div class="product_card">
-
                     <div class="product_card_item">
                         <img src="./img/card-1.jpg" alt="card">
                         <span class="add_to_cart">Add to Cart</span>
@@ -94,7 +57,6 @@
                             <span class="product_card_price">$52.00</span>
                         </div>
                     </div>
-
                     <div class="product_card_item">
                         <img src="./img/card-2.jpg" alt="card">
                         <div class="product_card_info">
@@ -105,7 +67,6 @@
                             <span class="product_card_price">$52.00</span>
                         </div>
                     </div>
-
                     <div class="product_card_item">
                         <img src="./img/card-3.jpg" alt="card">
                         <div class="product_card_info">
@@ -116,7 +77,6 @@
                             <span class="product_card_price">$52.00</span>
                         </div>
                     </div>
-
                     <div class="product_card_item">
                         <img src="./img/card-4.jpg" alt="card">
                         <div class="product_card_info">
@@ -127,7 +87,6 @@
                             <span class="product_card_price">$52.00</span>
                         </div>
                     </div>
-
                     <div class="product_card_item">
                         <img src="./img/card-5.jpg" alt="card">
                         <div class="product_card_info">
@@ -138,7 +97,6 @@
                             <span class="product_card_price">$52.00</span>
                         </div>
                     </div>
-
                     <div class="product_card_item">
                         <img src="./img/card-6.jpg" alt="card">
                         <div class="product_card_info">
@@ -149,68 +107,40 @@
                             <span class="product_card_price">$52.00</span>
                         </div>
                     </div>
-
-                </div>
-                <a href="catalog.html" class="more_button">Browse All Product</a>
-            </div>
-        </section>
-
-        <section class="advantages">
-            <div class="container">
-                <div class="advantages_card">
-
-                    <div class="advantages_card_item">
-                        <img src="./img/icon/delivery.svg" alt="delivery" class="advantages_card_icon">
-                        <h4 class="advantages_card_title">Free Delivery</h4>
-                        <p class="advantages_card_subtitle">Worldwide delivery on all. Authorit tively morph
-                            next-generation innov tion with extensive models.</p>
-                    </div>
-
-                    <div class="advantages_card_item">
-                        <img src="./img/icon/sale.svg" alt="delivery" class="advantages_card_icon">
-                        <h4 class="advantages_card_title">Sales & discounts</h4>
-                        <p class="advantages_card_subtitle">Worldwide delivery on all. Authorit tively morph
-                            next-generation innov tion with extensive models.</p>
-                    </div>
-
-                    <div class="advantages_card_item">
-                        <img src="./img/icon/quality.svg" alt="delivery" class="advantages_card_icon">
-                        <h4 class="advantages_card_title">Quality assurance</h4>
-                        <p class="advantages_card_subtitle">Worldwide delivery on all. Authorit tively morph
-                            next-generation innov tion with extensive models.</p>
-                    </div>
-
-
-                </div>
-            </div>
-        </section>
-
-        <section class="subscribe">
-            <div class="container">
-
-                <div class="subscribe_content">
-                    <div class="user_profile">
-                        <div class="foto_user">
-                            <img src="./img/foto-user.png" alt="user" class="foto_user_img">
+                    <div class="product_card_item">
+                        <img src="./img/card-7.jpg" alt="card">
+                        <div class="product_card_info">
+                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym Ellery teams up with Moda
+                                Operandi.</span>
+                            <span class="product_card_price">$52.00</span>
                         </div>
-                        <p class="user_text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus
-                            condimentum“</p>
                     </div>
-
-                    <div class="subscribe_form">
-                        <h4 class="form_title">Subscribe</h4>
-                        <p class="form_subtitle">For our newletter and promotion</p>
-                        <div class="form_submit">
-                            <input type="email" name="email" id="email" placeholder="Enter Your Email" class="email">
-                            <button type="submit" class="submit">Subscribe</button>
+                    <div class="product_card_item">
+                        <img src="./img/card-8.jpg" alt="card">
+                        <div class="product_card_info">
+                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym Ellery teams up with Moda
+                                Operandi.</span>
+                            <span class="product_card_price">$52.00</span>
+                        </div>
+                    </div>
+                    <div class="product_card_item">
+                        <img src="./img/card-9.jpg" alt="card">
+                        <div class="product_card_info">
+                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym Ellery teams up with Moda
+                                Operandi.</span>
+                            <span class="product_card_price">$52.00</span>
                         </div>
                     </div>
                 </div>
-
             </div>
         </section>
     </main>
-
     <footer class="footer">
         <div class="container">
             <div class="footer_info">
@@ -228,7 +158,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
