--- a/catalog.html
+++ b/catalog.html
@@ -38,16 +38,30 @@
     </header>
     <main class="main">
         <section class="card_page_nav">
-
+            <div class="container">
+                <div class="card_page_nav_content">
+                    <h3 class="card_page_title">New arrivals</h3>
+                    <div class="bread_crumbs">
+                        <ul>
+                            <li class="bread_crumbs_item"><a href="#" class="bread_crums_link">Home</a></li>
+                            <li class="bread_crumbs_item"><a href="#" class="bread_crums_link">Men</a></li>
+                            <li class="bread_crumbs_item"><a href="#"
+                                    class="bread_crums_link bread_crums_link_active">New arrivals</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="card_page_filter">
-
+            <div class="container">
+                <button class="filter"><span class="filter_item">Filter</span></button>
+            </div>
         </section>
         <section class="product">
             <div class="container">
                 <div class="product_card">
                     <div class="product_card_item">
-                        <img src="./img/card-1.jpg" alt="card">
+                        <img src="./img/catalog-img/card-1.jpg" alt="card">
                         <span class="add_to_cart">Add to Cart</span>
                         <div class="product_card_info">
                             <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
@@ -58,7 +72,7 @@
                         </div>
                     </div>
                     <div class="product_card_item">
-                        <img src="./img/card-2.jpg" alt="card">
+                        <img src="./img/catalog-img/card-2.jpg" alt="card">
                         <div class="product_card_info">
                             <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
                             <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
@@ -68,7 +82,7 @@
                         </div>
                     </div>
                     <div class="product_card_item">
-                        <img src="./img/card-3.jpg" alt="card">
+                        <img src="./img/catalog-img/card-3.jpg" alt="card">
                         <div class="product_card_info">
                             <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
                             <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
@@ -78,7 +92,7 @@
                         </div>
                     </div>
                     <div class="product_card_item">
-                        <img src="./img/card-4.jpg" alt="card">
+                        <img src="./img/catalog-img/card-4.jpg" alt="card">
                         <div class="product_card_info">
                             <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
                             <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
@@ -88,7 +102,7 @@
                         </div>
                     </div>
                     <div class="product_card_item">
-                        <img src="./img/card-5.jpg" alt="card">
+                        <img src="./img/catalog-img/card-5.jpg" alt="card">
                         <div class="product_card_info">
                             <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
                             <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
@@ -98,7 +112,7 @@
                         </div>
                     </div>
                     <div class="product_card_item">
-                        <img src="./img/card-6.jpg" alt="card">
+                        <img src="./img/catalog-img/card-6.jpg" alt="card">
                         <div class="product_card_info">
                             <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
                             <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
@@ -108,7 +122,7 @@
                         </div>
                     </div>
                     <div class="product_card_item">
-                        <img src="./img/card-7.jpg" alt="card">
+                        <img src="./img/catalog-img/card-7.jpg" alt="card">
                         <div class="product_card_info">
                             <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
                             <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
@@ -118,7 +132,7 @@
                         </div>
                     </div>
                     <div class="product_card_item">
-                        <img src="./img/card-8.jpg" alt="card">
+                        <img src="./img/catalog-img/card-8.jpg" alt="card">
                         <div class="product_card_info">
                             <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
                             <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
@@ -128,7 +142,7 @@
                         </div>
                     </div>
                     <div class="product_card_item">
-                        <img src="./img/card-9.jpg" alt="card">
+                        <img src="./img/catalog-img/card-9.jpg" alt="card">
                         <div class="product_card_info">
                             <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
                             <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
@@ -137,6 +151,40 @@
                             <span class="product_card_price">$52.00</span>
                         </div>
                     </div>
+                </div>
+                <div class="product_pagination">
+                    <ol class="pagination_items">
+                        <li class="pagination_item">
+                            <button class="pagination_nav_btn"><img src="./img/icon/left.svg" alt="left"></button>
+                        </li>
+                        <li class="pagination_item">
+                            <a href="#" class="link_pagination link_pagination_active">1</a>
+                        </li>
+                        <li class="pagination_item">
+                            <a href="#" class="link_pagination">2</a>
+                        </li>
+                        <li class="pagination_item">
+                            <a href="#" class="link_pagination">3</a>
+                        </li>
+                        <li class="pagination_item">
+                            <a href="#" class="link_pagination">4</a>
+                        </li>
+                        <li class="pagination_item">
+                            <a href="#" class="link_pagination">5</a>
+                        </li>
+                        <li class="pagination_item">
+                            <a href="#" class="link_pagination">6</a>
+                        </li>
+                        <li class="pagination_item">
+                            <a href="#" class="link_pagination more">...</a>
+                        </li>
+                        <li class="pagination_item">
+                            <a href="#" class="link_pagination">20</a>
+                        </li>
+                        <li class="pagination_item">
+                            <button class="pagination_nav_btn"><img src="./img/icon/right.svg" alt="right"></button>
+                        </li>
+                    </ol>
                 </div>
             </div>
         </section>
