--- a/catalog.html
+++ b/catalog.html
@@ -54,103 +54,143 @@
         </section>
         <section class="card_page_filter">
             <div class="container">
-                <button class="filter"><span class="filter_item">Filter</span></button>
+                <div class="card_filter_block">
+                    <button class="filter"><span class="filter_item">Filter</span></button>
+                    <div class="filter_block">
+                        <button class="filter_block_btn">
+                            <span class="fiter_block_item">Trending now</span>
+                        </button>
+                        <button class="filter_block_btn">
+                            <span class="fiter_block_item">Size</span>
+                        </button>
+                        <button class="filter_block_btn">
+                            <span class="fiter_block_item">Price</span>
+                        </button>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="product">
             <div class="container">
                 <div class="product_card">
-                    <div class="product_card_item">
-                        <img src="./img/catalog-img/card-1.jpg" alt="card">
-                        <span class="add_to_cart">Add to Cart</span>
-                        <div class="product_card_info">
-                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
-                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
-                                Australian arbiter of cool Kym Ellery teams up with Moda
-                                Operandi.</span>
-                            <span class="product_card_price">$52.00</span>
+                    <a href="product.html">
+                        <div class="product_card_item">
+                            <img src="./img/catalog-img/card-1.jpg" alt="card">
+                            <span class="add_to_cart">Add to Cart</span>
+                            <div class="product_card_info">
+                                <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                                <span class="product_card_subtitle">Known for her sculptural takes on traditional
+                                    tailoring,
+                                    Australian arbiter of cool Kym Ellery teams up with Moda
+                                    Operandi.</span>
+                                <span class="product_card_price">$52.00</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="product_card_item">
-                        <img src="./img/catalog-img/card-2.jpg" alt="card">
-                        <div class="product_card_info">
-                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
-                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
-                                Australian arbiter of cool Kym Ellery teams up with Moda
-                                Operandi.</span>
-                            <span class="product_card_price">$52.00</span>
+                    </a>
+                    <a href="product.html">
+                        <div class="product_card_item">
+                            <img src="./img/catalog-img/card-2.jpg" alt="card">
+                            <div class="product_card_info">
+                                <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                                <span class="product_card_subtitle">Known for her sculptural takes on traditional
+                                    tailoring,
+                                    Australian arbiter of cool Kym Ellery teams up with Moda
+                                    Operandi.</span>
+                                <span class="product_card_price">$52.00</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="product_card_item">
-                        <img src="./img/catalog-img/card-3.jpg" alt="card">
-                        <div class="product_card_info">
-                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
-                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
-                                Australian arbiter of cool Kym Ellery teams up with Moda
-                                Operandi.</span>
-                            <span class="product_card_price">$52.00</span>
+                    </a>
+                    <a href="product.html">
+                        <div class="product_card_item">
+                            <img src="./img/catalog-img/card-3.jpg" alt="card">
+                            <div class="product_card_info">
+                                <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                                <span class="product_card_subtitle">Known for her sculptural takes on traditional
+                                    tailoring,
+                                    Australian arbiter of cool Kym Ellery teams up with Moda
+                                    Operandi.</span>
+                                <span class="product_card_price">$52.00</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="product_card_item">
-                        <img src="./img/catalog-img/card-4.jpg" alt="card">
-                        <div class="product_card_info">
-                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
-                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
-                                Australian arbiter of cool Kym Ellery teams up with Moda
-                                Operandi.</span>
-                            <span class="product_card_price">$52.00</span>
+                    </a>
+                    <a href="product.html">
+                        <div class="product_card_item">
+                            <img src="./img/catalog-img/card-4.jpg" alt="card">
+                            <div class="product_card_info">
+                                <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                                <span class="product_card_subtitle">Known for her sculptural takes on traditional
+                                    tailoring,
+                                    Australian arbiter of cool Kym Ellery teams up with Moda
+                                    Operandi.</span>
+                                <span class="product_card_price">$52.00</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="product_card_item">
-                        <img src="./img/catalog-img/card-5.jpg" alt="card">
-                        <div class="product_card_info">
-                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
-                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
-                                Australian arbiter of cool Kym Ellery teams up with Moda
-                                Operandi.</span>
-                            <span class="product_card_price">$52.00</span>
+                    </a>
+                    <a href="product.html">
+                        <div class="product_card_item">
+                            <img src="./img/catalog-img/card-5.jpg" alt="card">
+                            <div class="product_card_info">
+                                <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                                <span class="product_card_subtitle">Known for her sculptural takes on traditional
+                                    tailoring,
+                                    Australian arbiter of cool Kym Ellery teams up with Moda
+                                    Operandi.</span>
+                                <span class="product_card_price">$52.00</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="product_card_item">
-                        <img src="./img/catalog-img/card-6.jpg" alt="card">
-                        <div class="product_card_info">
-                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
-                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
-                                Australian arbiter of cool Kym Ellery teams up with Moda
-                                Operandi.</span>
-                            <span class="product_card_price">$52.00</span>
+                    </a>
+                    <a href="product.html">
+                        <div class="product_card_item">
+                            <img src="./img/catalog-img/card-6.jpg" alt="card">
+                            <div class="product_card_info">
+                                <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                                <span class="product_card_subtitle">Known for her sculptural takes on traditional
+                                    tailoring,
+                                    Australian arbiter of cool Kym Ellery teams up with Moda
+                                    Operandi.</span>
+                                <span class="product_card_price">$52.00</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="product_card_item">
-                        <img src="./img/catalog-img/card-7.jpg" alt="card">
-                        <div class="product_card_info">
-                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
-                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
-                                Australian arbiter of cool Kym Ellery teams up with Moda
-                                Operandi.</span>
-                            <span class="product_card_price">$52.00</span>
+                    </a>
+                    <a href="product.html">
+                        <div class="product_card_item">
+                            <img src="./img/catalog-img/card-7.jpg" alt="card">
+                            <div class="product_card_info">
+                                <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                                <span class="product_card_subtitle">Known for her sculptural takes on traditional
+                                    tailoring,
+                                    Australian arbiter of cool Kym Ellery teams up with Moda
+                                    Operandi.</span>
+                                <span class="product_card_price">$52.00</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="product_card_item">
-                        <img src="./img/catalog-img/card-8.jpg" alt="card">
-                        <div class="product_card_info">
-                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
-                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
-                                Australian arbiter of cool Kym Ellery teams up with Moda
-                                Operandi.</span>
-                            <span class="product_card_price">$52.00</span>
+                    </a>
+                    <a href="product.html">
+                        <div class="product_card_item">
+                            <img src="./img/catalog-img/card-8.jpg" alt="card">
+                            <div class="product_card_info">
+                                <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                                <span class="product_card_subtitle">Known for her sculptural takes on traditional
+                                    tailoring,
+                                    Australian arbiter of cool Kym Ellery teams up with Moda
+                                    Operandi.</span>
+                                <span class="product_card_price">$52.00</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="product_card_item">
-                        <img src="./img/catalog-img/card-9.jpg" alt="card">
-                        <div class="product_card_info">
-                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
-                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
-                                Australian arbiter of cool Kym Ellery teams up with Moda
-                                Operandi.</span>
-                            <span class="product_card_price">$52.00</span>
+                    </a>
+                    <a href="product.html">
+                        <div class="product_card_item">
+                            <img src="./img/catalog-img/card-9.jpg" alt="card">
+                            <div class="product_card_info">
+                                <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                                <span class="product_card_subtitle">Known for her sculptural takes on traditional
+                                    tailoring,
+                                    Australian arbiter of cool Kym Ellery teams up with Moda
+                                    Operandi.</span>
+                                <span class="product_card_price">$52.00</span>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="product_pagination">
                     <ol class="pagination_items">
@@ -186,6 +226,60 @@
                         </li>
                     </ol>
                 </div>
+            </div>
+        </section>
+        <section class="advantages">
+            <div class="container">
+                <div class="advantages_card">
+
+                    <div class="advantages_card_item">
+                        <img src="./img/icon/delivery.svg" alt="delivery" class="advantages_card_icon">
+                        <h4 class="advantages_card_title">Free Delivery</h4>
+                        <p class="advantages_card_subtitle">Worldwide delivery on all. Authorit tively morph
+                            next-generation innov tion with extensive models.</p>
+                    </div>
+
+                    <div class="advantages_card_item">
+                        <img src="./img/icon/sale.svg" alt="delivery" class="advantages_card_icon">
+                        <h4 class="advantages_card_title">Sales & discounts</h4>
+                        <p class="advantages_card_subtitle">Worldwide delivery on all. Authorit tively morph
+                            next-generation innov tion with extensive models.</p>
+                    </div>
+
+                    <div class="advantages_card_item">
+                        <img src="./img/icon/quality.svg" alt="delivery" class="advantages_card_icon">
+                        <h4 class="advantages_card_title">Quality assurance</h4>
+                        <p class="advantages_card_subtitle">Worldwide delivery on all. Authorit tively morph
+                            next-generation innov tion with extensive models.</p>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
+
+        <section class="subscribe">
+            <div class="container">
+
+                <div class="subscribe_content">
+                    <div class="user_profile">
+                        <div class="foto_user">
+                            <img src="./img/foto-user.png" alt="user" class="foto_user_img">
+                        </div>
+                        <p class="user_text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus
+                            condimentum“</p>
+                    </div>
+
+                    <div class="subscribe_form">
+                        <h4 class="form_title">Subscribe</h4>
+                        <p class="form_subtitle">For our newletter and promotion</p>
+                        <div class="form_submit">
+                            <input type="email" name="email" id="email" placeholder="Enter Your Email" class="email">
+                            <button type="submit" class="submit">Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
     </main>
