--- a/product.html
+++ b/product.html
@@ -53,11 +53,82 @@
             </div>
         </section>
 
-        <section class="product_slider"></section>
+        <section class="product_slider">
+            <button class="slider_btn"></button>
+            <img src="./img/product-img/product-img.png" alt="product foto">
+            <button class="slider_btn slider_btn_active"></button>
+        </section>
 
-        <section class="product_annatation"></section>
+        <section class="product_annatation">
+            <div class="container">
+                <div class="product_annatation_info">
+                    <div class="product_offer">
+                        <h3 class="product_offer_title">Women collection</h3>
+                        <span class="product_offer_name">Moschino cheap and chic</span>
+                        <p class="product_offer_info">Compellingly actualize fully researched processes before proactive
+                            outsourcing. <br> Progressively syndicate collaborative
+                            architectures before cutting-edge services. Completely visualize parallel core competencies
+                            rather than exceptional
+                            portals.</p>
+                        <span class="product_offer_price">$561</span>
+                    </div>
+                    <hr class="product_annatation_info_line">
+                    <div class="product_offer_btns">
+                        <div class="product_offer_filter">
+                            <button class="filter_block_btn">
+                                <span class="fiter_block_item">Choose color</span>
+                            </button>
+                            <button class="filter_block_btn">
+                                <span class="fiter_block_item">Choose size</span>
+                            </button>
+                            <button class="filter_block_btn">
+                                <span class="fiter_block_item">Quantity</span>
+                            </button>
+                        </div>
+                        <button class="product_add_to_catd">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <section class="product_item"></section>
+        <section class="product_item">
+            <div class="container">
+                <div class="product_card_items">
+                    <div class="product_card_item">
+                        <img src="./img/card-4.jpg" alt="card">
+                        <div class="product_card_info">
+                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym Ellery teams up with Moda
+                                Operandi.</span>
+                            <span class="product_card_price">$52.00</span>
+                        </div>
+                    </div>
+
+                    <div class="product_card_item">
+                        <img src="./img/card-5.jpg" alt="card">
+                        <div class="product_card_info">
+                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym Ellery teams up with Moda
+                                Operandi.</span>
+                            <span class="product_card_price">$52.00</span>
+                        </div>
+                    </div>
+
+                    <div class="product_card_item">
+                        <img src="./img/card-6.jpg" alt="card">
+                        <div class="product_card_info">
+                            <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
+                            <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym Ellery teams up with Moda
+                                Operandi.</span>
+                            <span class="product_card_price">$52.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class="subscribe">
             <div class="container">
