Верстка страницы Cart

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="nav-right">
                     <button class="menu_btn"><img src="./img/icon/menu.svg" alt="menu"></button>
                     <a href="#"><img src="img/icon/user.svg" alt="user" class="user"></a>
-                    <a href="#">
+                    <a href="cart.html">
                         <img src="img/icon/cart.svg" alt="cart" class="cart">
                         <span class="badge">5</span>
                     </a>
