--- a/cart.html
+++ b/cart.html
@@ -45,8 +45,79 @@
             </div>
         </section>
         <section class="cart_main">
-            <div class="cart_left"></div>
-            <div class="cart_right"></div>
+            <div class="container">
+                <div class="card_main_content">
+                    <div class="cart_left">
+                        <div class="cart_left_items">
+                            <div class="cart_left_item">
+                                <img src="./img/catalog-img/card-3.jpg" alt="product foto" class="img_cart_left">
+                                <div class="cart_left_item_info">
+                                    <div class="header_cart_item">
+                                        <h3 class="item_info_title">
+                                            mango people <br>t-shirt
+                                        </h3>
+                                        <button class="close"></button>
+                                    </div>
+                                    <span class="item_info_price">Price: <snap class="price_red">$300</snap></span>
+                                    <span class="item_info_color">Color: Red</span>
+                                    <span class="item_info_size">Size: Xl</span>
+                                    <div class="item_info_quantity">
+                                        <label for="">Quantity:</label>
+                                        <input type="text" value="2">
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="cart_left_item">
+                                <img src="./img/catalog-img/card-2.jpg" alt="product foto" class="img_cart_left">
+                                <div class="cart_left_item_info">
+                                    <div class="header_cart_item">
+                                        <h3 class="item_info_title">
+                                            mango people <br>t-shirt
+                                        </h3>
+                                        <button class="close"></button>
+                                    </div>
+                                    <span class="item_info_price">Price: <snap class="price_red">$300</snap></span>
+                                    <span class="item_info_color">Color: Red</span>
+                                    <span class="item_info_size">Size: Xl</span>
+                                    <div class="item_info_quantity">
+                                        <label for="">Quantity:</label>
+                                        <input type="text" value="2">
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="cart_left_btns">
+                                <button class="cart_left_btn">
+                                    clear shopping cart
+                                </button>
+                                <button class="cart_left_btn">
+                                    continue shopping
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cart_right">
+                        <form action="" class="cart_right_form">
+                            <h3 class="cart_right_form_title">
+                                shipping adress
+                            </h3>
+                            <input type="text" placeholder="Bangladesh" class="cart_right_form_input">
+                            <input type="text" placeholder="State" class="cart_right_form_input">
+                            <input type="text" placeholder="Postcode / Zip" class="cart_right_form_input">
+                            <button class="cart_right_form_btn">get a quote</button>
+                        </form>
+                        <div class="info_pay">
+                            <div class="info_pay_total">
+                                <span class="sub_total">Sub total $900</span>
+                                <span class="grand_total">Grand total <span class="total_red">$900</span></span>
+                            </div>
+                            <hr>
+                            <button class="info_pay_btn">proceed to checkout</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="subscribe">
             <div class="container">
